
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int free (char*) ;
 char* r_str_newf (char*,int) ;
 int r_sys_setenv (char const*,char*) ;

__attribute__((used)) static void env(const char *s, int f) {
 char *a = r_str_newf ("%d", f);
 r_sys_setenv (s, a);

 free (a);
}
