; ModuleID = '/home/carl/AnghaBench/radare2/libr/lang/extr_ppipe.c_env.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/lang/extr_ppipe.c_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @env to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @env(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i8* @r_str_newf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %6)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @r_sys_setenv(i8* %8, i8* %9)
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @free(i8* %11)
  ret void
}

declare dso_local i8* @r_str_newf(i8*, i32) #1

declare dso_local i32 @r_sys_setenv(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
